--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Cartas para ti",
   "short_name": "Cartas 💌",
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#fce4ec",
   "theme_color": "#ec407a",
@@ -13,3 +13,4 @@
     }
   ]
 }
+
