--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,11 @@
   "theme_color": "#ec407a",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "carta-de-amor.png",
       "sizes": "192x192",
       "type": "image/png"
     }
   ]
 }
+
 
